[gd_scene load_steps=39 format=3 uid="uid://0517vk05k0lt"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_88401"]
[ext_resource type="FontFile" uid="uid://cg5jucgkutv8l" path="res://resource/fonts/Daydream.ttf" id="2_b3xca"]
[ext_resource type="AudioStream" uid="uid://pbd2cnr6u0q0" path="res://resource/Audio/musics/game-music-loop-6-144641.mp3" id="3_3p2n1"]
[ext_resource type="Texture2D" uid="uid://cl48atf2fsac1" path="res://resource/Tileset/Tileset_Borders.png" id="3_yegun"]
[ext_resource type="Texture2D" uid="uid://cv6ti2yvm2xfu" path="res://resource/Tileset/Background_n_details.png" id="4_u3vjh"]
[ext_resource type="Texture2D" uid="uid://3xsvrxv51k6d" path="res://resource/Objects/Items.png" id="6_3m1or"]
[ext_resource type="Texture2D" uid="uid://b7hq2x5rtll31" path="res://resource/Main_Characters/Char_Boy.png" id="7_v5eua"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tqrsj"]
texture = ExtResource("4_u3vjh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cbf0c"]
texture = ExtResource("3_yegun")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0

[sub_resource type="TileSet" id="TileSet_sixdm"]
sources/0 = SubResource("TileSetAtlasSource_tqrsj")
sources/1 = SubResource("TileSetAtlasSource_cbf0c")

[sub_resource type="AtlasTexture" id="AtlasTexture_2j32r"]
atlas = ExtResource("6_3m1or")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rarlo"]
atlas = ExtResource("6_3m1or")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2b1c"]
atlas = ExtResource("6_3m1or")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlw1g"]
atlas = ExtResource("6_3m1or")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2qix"]
atlas = ExtResource("6_3m1or")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3din"]
atlas = ExtResource("6_3m1or")
region = Rect2(16, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a5gdw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j32r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rarlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2b1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlw1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2qix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3din")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qawrq"]
atlas = ExtResource("7_v5eua")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d661c"]
atlas = ExtResource("7_v5eua")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywumr"]
atlas = ExtResource("7_v5eua")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpear"]
atlas = ExtResource("7_v5eua")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp4pk"]
atlas = ExtResource("7_v5eua")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3gkv"]
atlas = ExtResource("7_v5eua")
region = Rect2(240, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_s5p3l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qawrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d661c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywumr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpear")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp4pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3gkv")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_acx7q"]
atlas = ExtResource("6_3m1or")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_agrkj"]
atlas = ExtResource("6_3m1or")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w4ui"]
atlas = ExtResource("6_3m1or")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhl63"]
atlas = ExtResource("6_3m1or")
region = Rect2(112, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdppc"]
atlas = ExtResource("6_3m1or")
region = Rect2(112, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7sni"]
atlas = ExtResource("6_3m1or")
region = Rect2(112, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vyfnh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_acx7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agrkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w4ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhl63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdppc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7sni")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_0wtpx"]
atlas = ExtResource("6_3m1or")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2xwo"]
atlas = ExtResource("6_3m1or")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdsh3"]
atlas = ExtResource("6_3m1or")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sole0"]
atlas = ExtResource("6_3m1or")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwxob"]
atlas = ExtResource("6_3m1or")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_04s7q"]
atlas = ExtResource("6_3m1or")
region = Rect2(64, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1q1h8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wtpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2xwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdsh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sole0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwxob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04s7q")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="Menu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_88401")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_sixdm")
format = 2
layer_0/tile_data = PackedInt32Array(1507343, 0, 5, 1572879, 0, 6, 1638415, 0, 7, 1507344, 65536, 5, 1572880, 65536, 6, 1638416, 65536, 7, 1507345, 131072, 5, 1572881, 131072, 6, 1638417, 131072, 7, 983097, 0, 5, 1048633, 0, 6, 1114169, 0, 7, 983098, 65536, 5, 1048634, 65536, 6, 1114170, 65536, 7, 983099, 131072, 5, 1048635, 131072, 6, 1114171, 131072, 7, 2097213, 0, 5, 2162749, 0, 6, 2228285, 0, 7, 2097214, 65536, 5, 2162750, 65536, 6, 2228286, 65536, 7, 2097215, 131072, 5, 2162751, 131072, 6, 2228287, 131072, 7, 2359348, 0, 5, 2424884, 0, 6, 2490420, 0, 7, 2359349, 65536, 5, 2424885, 65536, 6, 2490421, 65536, 7, 2359350, 131072, 5, 2424886, 131072, 6, 2490422, 131072, 7, 1441841, 0, 5, 1507377, 0, 6, 1572913, 0, 7, 1441842, 65536, 5, 1507378, 65536, 6, 1572914, 65536, 7, 1441843, 131072, 5, 1507379, 131072, 6, 1572915, 131072, 7, 2293783, 0, 5, 2359319, 0, 6, 2424855, 0, 7, 2293784, 65536, 5, 2359320, 65536, 6, 2424856, 65536, 7, 2293785, 131072, 5, 2359321, 131072, 6, 2424857, 131072, 7, 2359298, 0, 5, 2424834, 0, 6, 2490370, 0, 7, 2359299, 65536, 5, 2424835, 65536, 6, 2490371, 65536, 7, 2359300, 131072, 5, 2424836, 131072, 6, 2490372, 131072, 7, 983044, 0, 5, 1048580, 0, 6, 1114116, 0, 7, 983045, 65536, 5, 1048581, 65536, 6, 1114117, 65536, 7, 983046, 131072, 5, 1048582, 131072, 6, 1114118, 131072, 7, 327684, 0, 5, 393220, 0, 6, 458756, 0, 7, 327685, 65536, 5, 393221, 65536, 6, 458757, 65536, 7, 327686, 131072, 5, 393222, 131072, 6, 458758, 131072, 7, 24, 0, 5, 65560, 0, 6, 131096, 0, 7, 25, 65536, 5, 65561, 65536, 6, 131097, 65536, 7, 26, 131072, 5, 65562, 131072, 6, 131098, 131072, 7, -196598, 0, 5, -131062, 0, 6, -65526, 0, 7, -196597, 65536, 5, -131061, 65536, 6, -65525, 65536, 7, -196596, 131072, 5, -131060, 131072, 6, -65524, 131072, 7, 196605, 0, 5, 262141, 0, 6, 327677, 0, 7, 196606, 65536, 5, 262142, 65536, 6, 327678, 65536, 7, 196607, 131072, 5, 262143, 131072, 6, 327679, 131072, 7, 1310715, 0, 5, 1376251, 0, 6, 1441787, 0, 7, 1310716, 65536, 5, 1376252, 65536, 6, 1441788, 65536, 7, 1310717, 131072, 5, 1376253, 131072, 6, 1441789, 131072, 7, 1900543, 0, 5, 1966079, 0, 6, 2031615, 0, 7, 1835008, 65536, 5, 1900544, 65536, 6, 1966080, 65536, 7, 1835009, 131072, 5, 1900545, 131072, 6, 1966081, 131072, 7, 1966122, 196608, 5, 2031658, 196608, 6, 1966123, 262144, 5, 2031659, 262144, 6, 2424869, 196608, 5, 2490405, 196608, 6, 2424870, 262144, 5, 2490406, 262144, 6, 2555914, 196608, 5, 2621450, 196608, 6, 2555915, 262144, 5, 2621451, 262144, 6, 1900564, 196608, 5, 1966100, 196608, 6, 1900565, 262144, 5, 1966101, 262144, 6, 1769479, 196608, 5, 1835015, 196608, 6, 1769480, 262144, 5, 1835016, 262144, 6, 2555900, 196608, 5, 2621436, 196608, 6, 2555901, 262144, 5, 2621437, 262144, 6, 1114156, 196608, 7, 1179692, 196608, 8, 1114157, 262144, 7, 1179693, 262144, 8, 1572916, 196608, 7, 1638452, 196608, 8, 1572917, 262144, 7, 1638453, 262144, 8, 1310781, 196608, 7, 1376317, 196608, 8, 1310782, 262144, 7, 1376318, 262144, 8, 327740, 196608, 7, 393276, 196608, 8, 327741, 262144, 7, 393277, 262144, 8, 52, 196608, 7, 65588, 196608, 8, 53, 262144, 7, 65589, 262144, 8, -65500, 196608, 7, 36, 196608, 8, -65499, 262144, 7, 37, 262144, 8, 131140, 196608, 7, 196676, 196608, 8, 131141, 262144, 7, 196677, 262144, 8, 852036, 196608, 7, 917572, 196608, 8, 852037, 262144, 7, 917573, 262144, 8, 1572930, 196608, 7, 1638466, 196608, 8, 1572931, 262144, 7, 1638467, 262144, 8, 2097220, 327680, 5, 2162756, 327680, 6, 2228292, 327680, 7, 2097221, 393216, 5, 2162757, 393216, 6, 2228293, 393216, 7, 2097222, 458752, 5, 2162758, 458752, 6, 2228294, 458752, 7, 2293804, 327680, 5, 2359340, 327680, 6, 2424876, 327680, 7, 2293805, 393216, 5, 2359341, 393216, 6, 2424877, 393216, 7, 2293806, 458752, 5, 2359342, 458752, 6, 2424878, 458752, 7, 917526, 327680, 5, 983062, 327680, 6, 1048598, 327680, 7, 917527, 393216, 5, 983063, 393216, 6, 1048599, 393216, 7, 917528, 458752, 5, 983064, 458752, 6, 1048600, 458752, 7, 1376290, 327680, 5, 1441826, 327680, 6, 1507362, 327680, 7, 1376291, 393216, 5, 1441827, 393216, 6, 1507363, 393216, 7, 1376292, 458752, 5, 1441828, 458752, 6, 1507364, 458752, 7, 655393, 327680, 5, 720929, 327680, 6, 786465, 327680, 7, 655394, 393216, 5, 720930, 393216, 6, 786466, 393216, 7, 655395, 458752, 5, 720931, 458752, 6, 786467, 458752, 7, 65578, 327680, 5, 131114, 327680, 6, 196650, 327680, 7, 65579, 393216, 5, 131115, 393216, 6, 196651, 393216, 7, 65580, 458752, 5, 131116, 458752, 6, 196652, 458752, 7, 2228241, 327680, 0, 2293777, 327680, 1, 2359313, 327680, 2, 2424849, 327680, 3, 2228242, 393216, 0, 2293778, 393216, 1, 2359314, 393216, 2, 2424850, 393216, 3, 2228243, 458752, 0, 2293779, 458752, 1, 2359315, 458752, 2, 2424851, 458752, 3, 2228244, 524288, 0, 2293780, 524288, 1, 2359316, 524288, 2, 2424852, 524288, 3, 1245193, 327680, 0, 1310729, 327680, 1, 1376265, 327680, 2, 1441801, 327680, 3, 1245194, 393216, 0, 1310730, 393216, 1, 1376266, 393216, 2, 1441802, 393216, 3, 1245195, 458752, 0, 1310731, 458752, 1, 1376267, 458752, 2, 1441803, 458752, 3, 1245196, 524288, 0, 1310732, 524288, 1, 1376268, 524288, 2, 1441804, 524288, 3, 720893, 327680, 0, 786429, 327680, 1, 851965, 327680, 2, 917501, 327680, 3, 720894, 393216, 0, 786430, 393216, 1, 851966, 393216, 2, 917502, 393216, 3, 720895, 458752, 0, 786431, 458752, 1, 851967, 458752, 2, 917503, 458752, 3, 655360, 524288, 0, 720896, 524288, 1, 786432, 524288, 2, 851968, 524288, 3, 393230, 327680, 0, 458766, 327680, 1, 524302, 327680, 2, 589838, 327680, 3, 393231, 393216, 0, 458767, 393216, 1, 524303, 393216, 2, 589839, 393216, 3, 393232, 458752, 0, 458768, 458752, 1, 524304, 458752, 2, 589840, 458752, 3, 393233, 524288, 0, 458769, 524288, 1, 524305, 524288, 2, 589841, 524288, 3, 327713, 327680, 0, 393249, 327680, 1, 458785, 327680, 2, 524321, 327680, 3, 327714, 393216, 0, 393250, 393216, 1, 458786, 393216, 2, 524322, 393216, 3, 327715, 458752, 0, 393251, 458752, 1, 458787, 458752, 2, 524323, 458752, 3, 327716, 524288, 0, 393252, 524288, 1, 458788, 524288, 2, 524324, 524288, 3, 327731, 327680, 0, 393267, 327680, 1, 458803, 327680, 2, 524339, 327680, 3, 327732, 393216, 0, 393268, 393216, 1, 458804, 393216, 2, 524340, 393216, 3, 327733, 458752, 0, 393269, 458752, 1, 458805, 458752, 2, 524341, 458752, 3, 327734, 524288, 0, 393270, 524288, 1, 458806, 524288, 2, 524342, 524288, 3, 393283, 327680, 0, 458819, 327680, 1, 524355, 327680, 2, 589891, 327680, 3, 393284, 393216, 0, 458820, 393216, 1, 524356, 393216, 2, 589892, 393216, 3, 393285, 458752, 0, 458821, 458752, 1, 524357, 458752, 2, 589893, 458752, 3, 393286, 524288, 0, 458822, 524288, 1, 524358, 524288, 2, 589894, 524288, 3, 1769505, 655360, 0, 1835041, 655360, 1, 1900577, 655360, 2, 1966113, 655360, 3, 1769506, 720896, 0, 1835042, 720896, 1, 1900578, 720896, 2, 1966114, 720896, 3, 1769507, 786432, 0, 1835043, 786432, 1, 1900579, 786432, 2, 1966115, 786432, 3, 1769508, 851968, 0, 1835044, 851968, 1, 1900580, 851968, 2, 1966116, 851968, 3, 2097190, 655360, 0, 2162726, 655360, 1, 2228262, 655360, 2, 2293798, 655360, 3, 2097191, 720896, 0, 2162727, 720896, 1, 2228263, 720896, 2, 2293799, 720896, 3, 2097192, 786432, 0, 2162728, 786432, 1, 2228264, 786432, 2, 2293800, 786432, 3, 2097193, 851968, 0, 2162729, 851968, 1, 2228265, 851968, 2, 2293801, 851968, 3, 2359324, 655360, 0, 2424860, 655360, 1, 2490396, 655360, 2, 2555932, 655360, 3, 2359325, 720896, 0, 2424861, 720896, 1, 2490397, 720896, 2, 2555933, 720896, 3, 2359326, 786432, 0, 2424862, 786432, 1, 2490398, 786432, 2, 2555934, 786432, 3, 2359327, 851968, 0, 2424863, 851968, 1, 2490399, 851968, 2, 2555935, 851968, 3, 2424865, 131072, 8, 2031628, 131072, 8, 2228222, 131072, 8, -65476, 0, 0, 60, 0, 1, 65596, 0, 2, 131132, 0, 3, -65475, 65536, 0, 61, 65536, 1, 65597, 65536, 2, 131133, 65536, 3, -65474, 131072, 0, 62, 131072, 1, 65598, 131072, 2, 131134, 131072, 3, -65473, 196608, 0, 63, 196608, 1, 65599, 196608, 2, 131135, 196608, 3, 2490436, 0, 0, 2555972, 0, 1, 2621508, 0, 2, 2687044, 0, 3, 2490437, 65536, 0, 2555973, 65536, 1, 2621509, 65536, 2, 2687045, 65536, 3, 2490438, 131072, 0, 2555974, 131072, 1, 2621510, 131072, 2, 2687046, 131072, 3, 2490439, 196608, 0, 2555975, 196608, 1, 2621511, 196608, 2, 2687047, 196608, 3, 1835056, 655360, 5, 1900592, 655360, 6, 1966128, 655360, 7, 2097200, 655360, 9, 1835057, 720896, 5, 1900593, 720896, 6, 1966129, 720896, 7, 2031665, 720896, 8, 2097201, 720896, 9, 1835058, 786432, 5, 1900594, 786432, 6, 1966130, 786432, 7, 2031666, 786432, 8, 2097202, 786432, 9, 1835059, 851968, 5, 1900595, 851968, 6, 1966131, 851968, 7, 2031667, 851968, 8, 2097203, 851968, 9, 1835060, 917504, 5, 1900596, 917504, 6, 1966132, 917504, 7, 2031668, 917504, 8, 2097204, 917504, 9, 1245206, 655360, 5, 1310742, 655360, 6, 1376278, 655360, 7, 1507350, 655360, 9, 1245207, 720896, 5, 1310743, 720896, 6, 1376279, 720896, 7, 1441815, 720896, 8, 1507351, 720896, 9, 1245208, 786432, 5, 1310744, 786432, 6, 1376280, 786432, 7, 1441816, 786432, 8, 1507352, 786432, 9, 1245209, 851968, 5, 1310745, 851968, 6, 1376281, 851968, 7, 1441817, 851968, 8, 1507353, 851968, 9, 1245210, 917504, 5, 1310746, 917504, 6, 1376282, 917504, 7, 1441818, 917504, 8, 1507354, 917504, 9, 851983, 655360, 5, 917519, 655360, 6, 983055, 655360, 7, 1114127, 655360, 9, 851984, 720896, 5, 917520, 720896, 6, 983056, 720896, 7, 1048592, 720896, 8, 1114128, 720896, 9, 851985, 786432, 5, 917521, 786432, 6, 983057, 786432, 7, 1048593, 786432, 8, 1114129, 786432, 9, 851986, 851968, 5, 917522, 851968, 6, 983058, 851968, 7, 1048594, 851968, 8, 1114130, 851968, 9, 851987, 524288, 7, 917523, 917504, 6, 983059, 917504, 7, 1048595, 917504, 8, 1114131, 917504, 9, 65543, 655360, 5, 131079, 655360, 6, 196615, 655360, 7, 327687, 655360, 9, 65544, 720896, 5, 131080, 720896, 6, 196616, 720896, 7, 262152, 720896, 8, 327688, 720896, 9, 65545, 786432, 5, 131081, 786432, 6, 196617, 786432, 7, 262153, 786432, 8, 327689, 786432, 9, 65546, 851968, 5, 131082, 851968, 6, 196618, 851968, 7, 262154, 851968, 8, 327690, 851968, 9, 65547, 917504, 5, 131083, 917504, 6, 196619, 917504, 7, 262155, 917504, 8, 327691, 917504, 9, 720923, 720896, 5, 786459, 720896, 6, 851995, 720896, 7, 917531, 720896, 8, 983067, 720896, 9, 720924, 786432, 5, 786460, 786432, 6, 851996, 786432, 7, 917532, 786432, 8, 983068, 786432, 9, 720925, 851968, 5, 786461, 851968, 6, 851997, 851968, 7, 917533, 851968, 8, 983069, 851968, 9, 720926, 917504, 5, 786462, 917504, 6, 851998, 917504, 7, 917534, 917504, 8, 983070, 917504, 9, 524294, 720896, 5, 589830, 720896, 6, 655366, 720896, 7, 720902, 720896, 8, 786438, 720896, 9, 524295, 786432, 5, 589831, 786432, 6, 655367, 786432, 7, 720903, 786432, 8, 786439, 786432, 9, 524296, 851968, 5, 589832, 851968, 6, 655368, 851968, 7, 720904, 851968, 8, 786440, 851968, 9, 524297, 917504, 5, 589833, 917504, 6, 655369, 917504, 7, 720905, 917504, 8, 786441, 917504, 9, 1, 720896, 5, 65537, 720896, 6, 131073, 720896, 7, 196609, 720896, 8, 262145, 720896, 9, 2, 786432, 5, 65538, 786432, 6, 131074, 786432, 7, 196610, 786432, 8, 262146, 786432, 9, 3, 851968, 5, 65539, 851968, 6, 131075, 851968, 7, 196611, 851968, 8, 262147, 851968, 9, 4, 917504, 5, 65540, 917504, 6, 131076, 917504, 7, 196612, 917504, 8, 262148, 917504, 9, 983048, 0, 8, 1048584, 0, 9, 983049, 65536, 8, 1048585, 65536, 9, 720908, 0, 8, 786444, 0, 9, 720909, 65536, 8, 786445, 65536, 9, 393243, 0, 8, 458779, 0, 9, 393244, 65536, 8, 458780, 65536, 9, 32, 0, 8, 65568, 0, 9, 33, 65536, 8, 65569, 65536, 9, -65520, 0, 8, 16, 0, 9, -65519, 65536, 8, 17, 65536, 9, 1245202, 131072, 8, 393237, 131072, 8, 1114146, 131072, 8, 1245214, 131072, 8, 917538, 131072, 8, 1114139, 983040, 5, 1179675, 983040, 6, 1114140, 1048576, 5, 1179676, 1048576, 6, 524316, 1114112, 5, 589852, 1114112, 6, 524317, 1179648, 5, 589853, 1179648, 6, 524318, 1245184, 5, 589854, 1245184, 6, 1245187, 1114112, 5, 1310723, 1114112, 6, 1245188, 1179648, 5, 1310724, 1179648, 6, 1245189, 1245184, 5, 1310725, 1245184, 6, 1048572, 1114112, 5, 1114108, 1114112, 6, 1048573, 1179648, 5, 1114109, 1179648, 6, 1048574, 1245184, 5, 1114110, 1245184, 6, 917516, 327680, 8, 983052, 327680, 9, 917517, 393216, 8, 983053, 393216, 9, -65517, 458752, 8, 19, 458752, 9, -65516, 524288, 8, 20, 524288, 9, 655376, 524288, 7, 786448, 524288, 7, 458753, 524288, 7, 327675, 524288, 7, 65533, 524288, 7, -65529, 524288, 7, -65507, 524288, 7, 131101, 524288, 7, 65571, 524288, 7, 720934, 524288, 7, 1114155, 524288, 7, 1245221, 524288, 7)
layer_1/tile_data = PackedInt32Array(720900, 458753, 7, 720899, 458753, 7, 720901, 458753, 7, 720898, 458753, 7, 720902, 458753, 7, 720897, 393217, 7, 720903, 524289, 7, 786439, 524289, 8, 851975, 524289, 8, 917511, 524289, 8, 983047, 524289, 8, 1048583, 524289, 8, 1114119, 524289, 8, 1179655, 524289, 8, 1245191, 524289, 8, 1310727, 524289, 8, 1376263, 524289, 8, 1441799, 524289, 8, 1507335, 524289, 8, 1572871, 524289, 8, 786433, 393217, 8, 851969, 393217, 8, 917505, 393217, 8, 983041, 393217, 8, 1048577, 393217, 8, 1114113, 393217, 8, 1179649, 393217, 8, 1245185, 393217, 8, 1310721, 393217, 8, 1376257, 393217, 8, 1441793, 393217, 8, 1507329, 393217, 8, 1572865, 393217, 8, 983069, 458753, 7, 983070, 458753, 7, 983071, 458753, 7, 983072, 458753, 7, 983068, 393217, 7, 1048604, 393217, 8, 1114140, 393217, 8, 1179676, 393217, 8, 1245212, 393217, 8, 1310748, 393217, 8, 1376284, 393217, 8, 1441820, 393217, 8, 1507356, 393217, 8, 1572892, 393217, 8, 1638428, 393217, 8, 983073, 524289, 7, 1048609, 524289, 8, 1114145, 524289, 8, 1179681, 524289, 8, 1245217, 524289, 8, 1310753, 524289, 8, 1376289, 524289, 8, 1441825, 524289, 8, 1507361, 524289, 8, 1572897, 524289, 8, 1638433, 524289, 8, 1703969, 524289, 8, 1769505, 524289, 8)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b3xca")
theme_override_font_sizes/font_size = 40
text = "La PlanetPerdue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Button_play" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b3xca")
theme_override_font_sizes/font_size = 30
text = "Jouer"

[node name="Button_option" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b3xca")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="Button_quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b3xca")
theme_override_font_sizes/font_size = 30
text = "Quiter"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Gui"

[node name="AudioMusics" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3p2n1")
autoplay = true
bus = &"musics"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(145, 325)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_a5gdw")
autoplay = "default"
frame_progress = 0.481936

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(989, 469)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_s5p3l")
autoplay = "default"
frame_progress = 0.405355

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(995, 386)
rotation = 0.862302
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_vyfnh")
autoplay = "default"
frame_progress = 0.377011

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="."]
position = Vector2(300, 111)
rotation = -0.462526
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_1q1h8")
frame_progress = 0.106505

[node name="AnimatedSprite2D5" type="AnimatedSprite2D" parent="."]
position = Vector2(969, 119)
rotation = 0.21882
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_1q1h8")
autoplay = "default"
frame_progress = 0.264756

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_option" to="." method="_on_button_option_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button_quit" to="." method="_on_button_quit_pressed"]
